@@ -53,6 +53,7 @@ type position =
   | Last
   | Before of string
   | After of string
+  | Like of string
   | Level of string
 ;;
 
